--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,20 +2,12 @@
 .small-para {
   color: hsl(0, 100%, 50%);
 }
-
-.small-para {
-  font-size: 14px;
-}
-
 .para {
   font-size: 22px;
 }
-
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
+.small-para {
+  font-size: 14px;
+}
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -23,7 +15,12 @@
   font-size: 20px;
 }
 
-.child {
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
+.text .child {
   color: red;
   font-size: 14px;
 }
