--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  padding:10px;
+  align-items:center;
 }
 
 .logo {
@@ -14,6 +19,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  padding:0;
+  gap:15px;
+  margin:0;
 }
 
 a {
