--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,52 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+.header{
+  font-size:32px;
+  font-weight:900;
+  padding-left: 16px;
+  display:flex;
+  align-items:center;
+}
+.footer{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+body{
+  display:flex;
+  flex-direction:column;
+}
+.container{
+  display:flex;
+  flex:1;
+}
+.sidebar{
+  width:300px;
+  flex-shrink:0;
+  font-size:24px;
+  justify-content: flex-start;;
+}
+.sidebar a{
+  color:#fff;
+  text-decoration:none;
+}
+.sidebar ul{
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+.sidebar li{
+  padding:16px;
+  margin:0;
+}
+.boxcontainer{
+  display:flex;
+  flex-flow:row wrap;
+  gap:32px;
+  padding:32px;
+}
+.card{
+  padding: 32px;
+  width:300px;
+}
